# AoC

./: .gitignore  Pipfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
2020/: README.md  d01.py  d02.py  d03.py  d04.py  d04_pydantic.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  test_d01.py  test_d02.py  test_d03.py  test_d04.py  test_d05.py  test_d06.py  test_d07.py  test_d08.py  test_d09.py  test_d10.py
2021/: README.md  d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  test_d01.py  test_d02.py  test_d03.py  test_d04.py  test_d05.py  test_d06.py  test_d07.py  test_d08.py  test_d09.py  test_d10.py
2022/: README.md  d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  test_d01.py  test_d02.py  test_d03.py  test_d04.py  test_d05.py  test_d06.py  test_d07.py  test_d08.py  test_d09.py
2023/: README.md  d01.py  d02.py  d03.py  d04.py  test_d01.py  test_d02.py  test_d03.py  test_d04.py
misc/: rp_state_machine.py  test_rp_state_machine.py
