[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Python solutions to Advent of Code"
authors = ["Russell Fenn"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ipython = "^8.5.0"
httpx = "^0.23.0"
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
mypy = "^0.971"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
