[project]
name = "aoc"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Russell Fenn", email = "russellfenn@gmail.com" }
]
dependencies = [
    "ipython>=8.27.0",
    "httpx>=0.27.2",
    "pydantic>=2.8.2",
    "ruff>=0.6.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "pytest>=8.3.2",
    "mypy>=1.11.2",
]
